src/objects/Product_Organization_Admin__c.object
<CustomObject>
    <fields>
        <fullName>Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Organization_Admins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Associated_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Product Organization Admins</relationshipLabel>
        <relationshipName>Product_Organization_Admins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Organization__c</fullName>
        <label>Product Organization</label>
        <referenceTo>Product_Organization__c</referenceTo>
        <relationshipLabel>Product Organization Admins</relationshipLabel>
        <relationshipName>Product_Organization_Admins</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Product Organization Admin</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AD-{0000}</displayFormat>
        <label>Product Organization Admin Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Organization Admins</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>